nav bug that wouldn't show sign up on mobile

--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -141,6 +141,10 @@
         text-align: right;
     }
 
+    .hidden{
+        display: block;
+    }
+
     .signOut{
         background-color: #fff;
         border: none;
